[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A perfect and imperfect maze generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = ["mazegen"]